kubernetes/result/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: project3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: application-result:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
