kubernetes/result/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: project3
spec:
  selector:
    app: result
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
